SIS/force-app/main/default/objects/Programme_Master__c/Programme_Master__c.object-meta.xml
<CustomObject>
    <label>Programme Master</label>
    <nameField>
        <label>Programme Master  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programme Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>