SIS/force-app/main/default/objects/Programme_Master__c/fields/Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>Campus_Code__c</fullName>
    <label>Campus Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>