SIS/force-app/main/default/objects/Programme_Master__c/fields/Campus_Location__c.field-meta.xml
<CustomField>
    <fullName>Campus_Location__c</fullName>
    <label>Campus Location</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>