SIS/force-app/main/default/objects/Programme_Master__c/fields/Campus_Name__c.field-meta.xml
<CustomField>
    <fullName>Campus_Name__c</fullName>
    <label>Campus Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>