SIS/force-app/main/default/objects/Programme_Master__c/fields/Campus_SFID__c.field-meta.xml
<CustomField>
    <fullName>Campus_SFID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campus SFID</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Select a Valid Campus</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Campus_ID</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programme Masters</relationshipLabel>
    <relationshipName>Programme_Masters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>