SIS/force-app/main/default/objects/Programme_Master__c/fields/CRM_Programme_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Programme_Master_ID__c</fullName>
    <label>CRM Programme Master ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>