SIS/force-app/main/default/objects/Programme_Master__c/fields/CRMProgramme_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>CRMProgramme_Master_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Programme Master ID</label>
    <type>Text</type>
</CustomField>