SIS/force-app/main/default/objects/Programme_Master__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <label>Department Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>