SIS/force-app/main/default/objects/Programme_Master__c/fields/Is_Offer__c.field-meta.xml
<CustomField>
    <fullName>Is_Offer__c</fullName>
    <label>Is Offer</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>