SIS/force-app/main/default/objects/Programme_Master__c/fields/Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Education__c</fullName>
    <label>Level of Education</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>