SIS/force-app/main/default/objects/Programme_Master__c/fields/Programme_Code__c.field-meta.xml
<CustomField>
    <fullName>Programme_Code__c</fullName>
    <label>Programme Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>