SIS/force-app/main/default/objects/Programme_Master__c/fields/Programme_Duration__c.field-meta.xml
<CustomField>
    <fullName>Programme_Duration__c</fullName>
    <label>Programme Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>