SIS/force-app/main/default/objects/Programme_Master__c/listViews/SISJB.listView-meta.xml
<ListView>
    <fullName>SISJB</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campus_SFID__c</field>
        <operation>equals</operation>
        <value>SISJ</value>
    </filters>
    <label>SISJB</label>
</ListView>