SIS/force-app/main/default/objects/Programme_Master__c/listViews/SISKL.listView-meta.xml
<ListView>
    <fullName>SISKL</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campus_SFID__c</field>
        <operation>equals</operation>
        <value>SIS/SCIS</value>
    </filters>
    <label>SISKL</label>
</ListView>